@@ -22,6 +22,16 @@ What's New in 2014
     TEMP_DIRECTORY = temp%n
     BATCH_DIRECTORY = batch%n
     NUM_INSTANCES = 4
+* INIT will create default archiver configuration for infozip's unzip/zip. If
+  you want to try it just delete archiver.dat (back it up first) and rerun
+  INIT to create the new defaults.
+* Internal QWK support has been added and only works with ZIP archives for now.
+* Added new wwiv.ini setting to enable/disable internal QWK and wwivmail from
+  the //QWK menu.  These currently both default to 'Y' (the wwivmail one will
+  shortly default to 'N', so if you use it please add this to your INI)
+  Here are the ini keys and default values:
+    USE_WWIVMAIL = Y
+    USE_INTERNAL_QWK = Y
 
 What's New in Beta-2
 ~~~~~~~~~~~~~~~~~~~~~
